# techchallenge_api_embrapa

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  user.db
src/api/auth/: login.py  signup.py
src/api/scrape/: commercialization.py  export.py  importation.py  processing.py  production.py
src/core/: dependencies.py  security.py
src/crud/: user.py
src/db/: session.py
src/db/models/: comercialization.py  exportation.py  importation.py  processing.py  production.py  user.py
src/schemas/: user.py
src/scraping/: scraping_base.py  scraping_commercialization.py  scraping_exportation.py  scraping_importation.py  scraping_processing.py  scraping_production.py
src/services/: commercialization_service.py  exportation_service.py  importation_service.py  processing_service.py  production_service.py
tests/scrapping/: test_commercialization.py  test_exportation.py  test_importation.py  test_processing.py  test_production.py
tests/scrapping/stubs/: exportacao.html  importacao.html
