[project]
name = "techchallenge1"
version = "0.1.0"
description = "Api para busca de informações no site da embrapa"
authors = [
    {name = "Miler",email = "estudos.miler@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "jwt (>=1.3.1,<2.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "techchallenge1", from = "src"}]

[tool.poetry.scripts]
dev = "uvicorn techchallenge1.app:app --reload"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
